wp-content/themes/blacktieskis/stylesheets/custom.css
/* ... */
#menu-main-menu .menu-item-has-children:hover .sub-menu {
  opacity: 1;
  visibility: visible;
  pointer-events: initial;
}

@media (max-width: 990px) {
  #menu-main-menu .menu-item-has-children:hover .sub-menu {
    opacity: 1;
    visibility: visible;
    pointer-events: initial;
    text-align: center;

    position: inherit;
  }
  #menu-main-menu .menu-item-has-children .sub-menu {
    background-color: #1ac1ff;
    width: 100%;

    padding: 0px;
  }

  #menu-main-menu .menu-item-has-children .sub-menu li {
    background-color: #fff;
    width: 300px;
    padding: 10px;
    margin: auto;
  }
}

@media (max-width: 414px) {
  .navbar .btn-cta {
    left: unset !important;

    text-align: center !important;
    margin: auto;
    width: 100%;
  }
}

@media (max-width: 991px) {
  .mod-hero-image {
    height: 400px;
    overflow: hidden;
  }
}

.mod-hero-image .content-fix {
  display: none !important;
}
.mod-hero-image .content {
  padding: 140px 20px 80px;
  -webkit-transform: none !important;
  transform: none !important;
}
@media (min-width: 768px) {
  .mod-hero-image .content {
    padding: 160px 60px 80px;
  }
}
@media (min-width: 992px) {
  .mod-hero-image .content {
    padding: 180px 100px 80px;
  }
}

.mod-reviews {
  padding: 50px 0 !important;
}

.page-id-20 #products {
  padding: 70px;
  height: 350px;
}
.book-ski-headline {
  padding-top: 10px;
  padding-bottom: 70px;
}
.book-ski-headline .btn {
  min-width: 175px;
  margin: 6px;
  padding: 12px 30px;
  font-size: 1rem;
}
.mod-book-ski .btn:first-of-type {
  margin: 0;
}
#boonowbutton {
  color: #fff;
  background-color: #568f3b;
  padding: 12px 30px !important;
  border-radius: 6px;
  font-weight: bold;
  text-transform: uppercase;
  display: inline-block;
  text-decoration: none;
  font-size: 1rem;
  vertical-align: middle;
  transition: all 0.3s ease !important;
}
html body #boonowbutton:hover,
html body #boonowbutton.is-hover {
  background-color: #256bb2 !important;
  color: #fff !important;
  text-decoration: none !important;
  transition: all 0.3s ease !important;
}
.newcl a:hover {
  background: #256bb2 !important;
  border-color: #256bb2 !important;
  text-decoration: none !important;
}
.popup-content {
  text-align: center !important;
}

.over-loader {
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  background: #568f3b !important;
  display: flex;
  align-items: center;
  justify-content: center;
}

.loader {
  top: auto !important;
  left: auto !important;
  transform: none !important;
  -webkit-transform: none !important;
  -ms-transform: none !important;
}

.loader-logo {
  width: 150px;
  height: auto;
  display: block;
}

@media (min-width: 992px) {
  .loader-logo {
    width: 300px;
  }
}

.popup-careers {
  max-width: 800px !important;
  max-height: 785px;
}
@media only screen and (max-width: 575px) {
  .page-id-20 #products {
    padding: 70px;
    height: 550px;
  }
  .mod-about .triangle-black {
    border-left: 400px solid transparent;
    border-top: 299px solid #000;
  }
  .mod-about .triangle-blue {
    border-right: 353px solid transparent;
    border-top: 420px solid #568f3b;
  }
}
@media only screen and (max-width: 767px) {
  .page-id-20 .mod-hero-image .content {
    margin: 0 auto -150px;
  }
  .tab button {
    padding: 15px 13px !important;
    border-left: 1px solid #fff !important;
  }
  .popup-inner {
    display: block !important;
  }
  .select-cnew {
    padding: 15px 21px;
    background: #568f3b;
    border: 0px solid #dfe8e0;
    text-transform: uppercase;
    margin-top: 26px;
    margin-left: 10px;
  }
}
@media (min-width: 1200px) {
  .main-menu-ul > li {
    margin: 0px 11px !important;
  }
}

.hamburger-menu.is-open-menu .icon-bar:first-child {
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  -webkit-transform-origin: top left;
  -ms-transform-origin: top left;
  transform-origin: top left;
  top: 5px;
  left: 2px;
}

.hamburger-menu.is-open-menu .icon-bar:nth-child(3) {
  -webkit-transform: rotate(-46deg);
  -ms-transform: rotate(-46deg);
  transform: rotate(-46deg);
  -webkit-transform-origin: left top;
  -ms-transform-origin: left top;
  transform-origin: left top;
  top: 9px;
}

/* Dropdown Button */
.dropdown-button {
  background-color: #0000b3;
  color: white;
  padding: 16px;
  font-size: 16px;
  border: none;
}
.dropdown {
  position: relative;
  display: inline-block;
}
/* Dropdown Content (Hidden by Default) */
.dropdown-list {
  display: none;
  position: absolute;
  background-color: #f1f1f1;
  min-width: 160px;
  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
  z-index: 1;
}
/* Links inside the dropdown */
.dropdown-list a {
  color: black;
  padding: 12px 16px;
  text-decoration: none;
  display: block;
  font-family: verdana;
}
/* Change color of dropdown links on hover */
.dropdown-list a:hover {
  background-color: #ddd;
}
/* Show the dropdown list on hover */
.dropdown:hover .dropdown-list {
  display: block;
}
/* Change the background color of the dropdown button when the dropdown list is shown */
.dropdown:hover .dropdown-button {
  background-color: #6666ff;
}

.select-cnew {
  padding: 15px 21px;
  background: #568f3b;
  border: 0px solid #dfe8e0;
  text-transform: uppercase;

  margin-top: -6px;
  margin-left: 10px;
}
html.popup-animation .popup-inner {
  padding-top: 2% !important;
}

.mod-popup1 {
  display: none !important;
}

.mod-popup.popup-show.popup-show-default.popup-flex-center .mask-pop-overlay {
  opacity: 0.65;
}

@media (max-width: 991px) {
  .mod-steps .step-item {
    margin: 0 0 0px;
  }
  .box-step.ani3 {
    margin: 7px 0 0 0;
  }
  .box-step.ani4 {
    margin: 7px 0 0 0;
  }
  .page-id-20 .mod-hero-image .content {
    margin: 0 auto -218px;
  }
  .animation5 .step-item-image-cont {
    position: absolute;
    top: 114px;
    right: 0;
    left: 0;
  }
}

@media (max-width: 767px) {
  .popup-header-content {
    display: flex;
  }
  .desktop {
    display: none;
  }
}
/* ... */

